--- a/coreapp/templates/weight_word.html
+++ b/coreapp/templates/weight_word.html
@@ -2,6 +2,51 @@
 
 {% block head %}
 <title>Weight Loss | Weigh-in Word</title>
+<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
+<script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
+<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy" crossorigin="anonymous"></script>
+<style>
+    .popUpContainer{
+        position:absolute;
+        width:100%;
+        top:0%;
+        height:100%;
+        background-color:rgba(0,0,0,0.2);
+        display:none;
+    }
+    .popUpCol{
+        max-width:50vw;
+        margin:auto;
+        background-color:white;
+        border-radius:10px;
+        margin-top:34vh;
+        text-align:center;
+    }
+    .popUpCol h1{
+        font-size:40px;
+        margin-top:10px;
+    }
+    .popUpCol button{
+        background-color:white;
+        border-radius:7px;
+        border-color:black;
+        border-width:1px;
+        display:block;
+        margin:auto;
+        max-width:200px;
+        width:100%;
+        margin-top:10px;
+        margin-bottom:20px;
+    }
+    .whyAmIDoingThisLink{
+     color: #007bff;
+     cursor:pointer;
+    }
+    .whyAmIDoingThisLink:hover{
+        text-decoration:underline;
+    }
+</style>
 {% endblock %}
 
 {% block body %}
@@ -14,7 +59,33 @@
 
 <p>Be sure to use large letters that will be clearly visible in your photo.</p>
 
-<a href="#">Why am I doing this?</a><br/>
+<!--<a href="#">Why am I doing this?</a><br/>-->
+<div class="whyAmIDoingThisLink" onclick="$('.popUpContainer').css('display','block');">Why am I doing this?</div>
 
 <a href="#">Back</a>  <a href="{% url 'coreapp:user_details' slug %}">Continue</a>
+<div class="popUpContainer container-fluid">
+    <div class="row ml-0 mr-0">
+        <div class="col-12 popUpCol">
+            <h1>About Words</h1>
+            <hr/>
+            <p>
+                Lorem Ipsum is simply dummy text of the printing and typesetting industry.
+                Lorem Ipsum has been the industry's standard dummy text ever since the 1500s,
+                when an unknown printer took a galley of type and scrambled it to make a type specimen book.
+                It has survived not only five centuries, but also the leap into electronic typesetting,
+                remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheet
+            </p>
+            <a>Questions?</a>
+            <button onclick="$('.popUpContainer').css('display','none');">close</button>
+        </div>
+    </div>
+</div>
+<script>
+    $('.whyAmIDoingThisLink').click(function(){
+
+    });
+    $('.popUpCol button).click(function(){
+
+    })
+</script>
 {% endblock %}
