--- a/coreapp/templates/home.html
+++ b/coreapp/templates/home.html
@@ -1,5 +1,7 @@
 {% extends 'base.html' %}
 
+{% load socialaccount %}
+{% providers_media_js %}
 {% load widget_tweaks %}
 
 
@@ -9,6 +11,6 @@
 {% endblock %}
 
 {% block body %}
-<a href="#">Continue in with Facebook</a><br/>
+<a href="{% provider_login_url 'facebook' method='oauth2' %}">Connect to Facebook</a><br/>
 <a href="{% url 'accounts:signup' %}"> or sign up with email</a>
 {% endblock %}
